<resources>
    <string name="app_name">Loye Wali App</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="login">Login</string>
    <string name="hint_name">Name</string>
    <string name="register">Register</string>
    <string name="btn_link_to_login">Login</string>
    <string name="length_tv">Login</string>
    <string name="quantity_tv">Login</string>
    <string name="OrderTitle">Your Order</string>

    <string name="title_activity_ad">AdActivity</string>
    <string name="action_settings">Settings</string>


    <string name="hello_world">Hello world!</string>
    <!-- -
        This is an ad unit ID for a banner test ad. Replace with your own banner ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="title_activity_ad_mob">AdMob</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="channel_description">Order Added</string>
    <string name="channel_name">My Channel</string>

</resources>